syntax = "proto3";

package roleypoly.discord;
option go_package = "github.com/roleypoly/rpc/discord";

import "google/protobuf/empty.proto";
import "shared/shared.proto";

service Discord {
  rpc ListGuilds(google.protobuf.Empty) returns (GuildList) {}
  rpc GetGuild(roleypoly.IDQuery) returns (Guild) {}
  rpc GetGuildRoles(roleypoly.IDQuery) returns (GuildRoles) {}
  rpc GetGuildsByMember(roleypoly.IDQuery) returns (GuildList) {}

  rpc GetMember(roleypoly.IDQuery) returns (Member) {}
  rpc GetUser(roleypoly.IDQuery) returns (roleypoly.DiscordUser) {}
  rpc UpdateMember(Member) returns (Member) {}

  rpc OwnUser(google.protobuf.Empty) returns (roleypoly.DiscordUser) {}
}

message GuildMembers {
  string ID = 1;
  repeated Member members = 2;
}

message Member {
  string guildID = 1;
  repeated string roles = 3;
  string nick = 4;
  roleypoly.DiscordUser user = 5;
}

message ShardInfo {
  int32 shards = 1;
  int32 servers = 2;
  int32 users = 3;
  int32 roles = 4;
}